   or into bytecode.
   
3. Integrated full support for preserving annotations in Jimple
   and writing them to bytecode. SOURCE level annotations are
   preserved if code is read from source and the flag
   -p jb preserve-source-annotations is given. (does not hold for
   package and local variable annotations) SOURCE level annotations
   are not written into bytecode by Soot.

Improvements and API changes in version 2.2.5 

1. Soot now has an option to prepend the classpath given on the
   command line to the default classpath.  See the documentation on 
   the option -pp for details.

2. Included Manu Sridharan's demand-driven points-to analysis.  See
   http://doi.acm.org/10.1145/1133255.1134027 for details.  It can be
   activated via: -p cg.spark cs-demand:true, and also has two other
   phase options to control the effort with which the analysis
   tries to build context information.

3. Added local must-alias and not-may alias analyses. See package
   soot.jimple.toolkits.pointer.

4. Updated NullnessAnalysis for better performance. Thanks to Julian
   Tibble!

5. The flow analysis framework is now generic. One can explicitly
   declare the type of the abstraction and that is used for the fixed
   point iteration and the node type for the graph that is iterated over.
   This avoids a lot of casting one had to do in the past.

6. Between versions 2.2.3 and 2.2.4, a bug was introduced to Spark:
   PointsToSetInternal now implements equals/hashCode which confused the
   propagator algorithm because it was relying on comparison by identity.
   This lead to a five-fold slowdown on the points-to analyses and
   potentially wrong results.  The bug has now been fixed by modifying
   the propagator algorithm. Original speed was restored.

7. Richard Halpert's lock allocator as published at PACT'07, see:
   http://www.sable.mcgill.ca/publications/papers/#pact2007
   It is accessible via the wjtn (whole-jimple transaction) pack.
   