@@ -6,6 +6,10 @@
     
 -------------------- Soot Contributors ------------------------
                   (in alphabetical order)
+
+Will Benton
+    - Annotation generator for Java 5 annotations
+
 Marc Berndl
     - Soot framework optimization
     - annotation
